--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.user-nav-img {
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+
+  margin-left: 30px;
+}
