Убрано подчеркивание ссылок. Рефактор страницы регистрации.

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -89,3 +89,7 @@
 .dropdown:hover .dropdown-child {
   display: block;
 }
+
+a {
+  text-decoration: none !important; /* Убирает подчеркивание для ссылок */
+}
