--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -86,6 +86,15 @@
   text-decoration: none;
   display: block;
 }
+.dropdown-child a:hover {
+  color: white;
+  -webkit-text-shadow: 1px 1px 5px #9daccb;
+  -moz-text-shadow: 1px 1px 5px #9daccb;
+  -o-text-shadow: 1px 1px 5px #9daccb;
+  -ms-text-shadow: 1px 1px 5px #9daccb;
+  text-shadow: 1px 1px 5px #9daccb;
+}
+
 .dropdown:hover .dropdown-child {
   display: block;
 }
