--- a/react-app/src/main_page_component/MainPage.css
+++ b/react-app/src/main_page_component/MainPage.css
@@ -4,8 +4,26 @@
 
 .main-a {
     text-decoration: none;
+    color: #000000;
 }
 
 a {
     text-decoration: none; /* Убирает подчеркивание для ссылок */
+
+}
+
+.ocard {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0, 0, 0, .125);
+    border-radius: 1em;
+    font-family: "Roboto", sans-serif;
+
+    min-width: 250px;
+    padding: 5px;
 }
