--- a/react-app/src/flat_page_component/FlatPage.css
+++ b/react-app/src/flat_page_component/FlatPage.css
@@ -13,6 +13,12 @@
 
 .main-window-right {
     width: 35%;
+
+
+    display: table;
+}
+
+.main-window-right-section {
     -webkit-align-self: stretch;
     -ms-flex-item-align: stretch;
     align-self: stretch;
@@ -66,7 +72,7 @@
     display: grid;
 }
 
-.show-phone {
+.show-phone-button {
     border-radius: 40px;
     padding: 10px;
     align-content: center;
@@ -76,7 +82,7 @@
     background-color: #33a8db;
 }
 
-.show-phone:hover {
+.show-phone-button:hover {
     background-color: #2e6da2;
 }
 
@@ -85,4 +91,79 @@
     white-space: nowrap;
     color: #fff;
     border: none;
+}
+
+.phone-number-text {
+    display: block;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.21;
+    text-decoration: none;
+    color: #182930;
+
+    align-content: center;
+}
+
+.email-text {
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.21;
+    text-decoration: none;
+    color: #182930;
+
+    align-content: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.text-with-phone {
+    margin: 4px 0 0;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #7a7a7a;
+}
+
+.text_with_price {
+    margin: 8px 0 0;
+    padding-bottom: 4px;
+    font-size: 14px;
+    line-height: 18px;
+    color: #182930;
+
+    font-size: larger;
+    text-align: center;
+}
+
+.sailer-text {
+    margin: 5px 0 0;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 22px;
+}
+
+.right-secton-devider {
+    display: flex;
+}
+
+.rieltor-awatar {
+    border-radius: 50px;
+
+    margin-left: 20px;
+
+    width: 100px;
+    height: 100px;
+}
+
+.rieltor-date-registreation {
+    font-size: 14px;
+    line-height: 18px;
+    color: #7a7a7a;
+}
+
+.centerred-loader {
+    margin: 0 auto;
+    display: table;
 }
