--- a/react-app/src/user_profile_component/UserProfile.css
+++ b/react-app/src/user_profile_component/UserProfile.css
@@ -587,3 +587,144 @@ body {
     height: calc(100vh - 20px);
     /* hardcode */
 }
+
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+li {
+    width: auto !important;
+}
+
+.container-main {
+    box-sizing: inherit;
+}
+
+.mdv {
+    box-sizing: inherit !important;
+}
+
+.tbs-mn {
+    box-sizing: content-box !important;
+}
+
+.repl-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.repl-main {
+    display: flex;
+    flex-direction: row;
+}
+
+.mar {
+    margin-left: 10px;
+}
+
+.repl-avatar {
+    width: 64px;
+    height: 64px;
+
+    border-radius: 50%;
+}
+
+.repl-avatar-div {
+    display: flex;
+
+    width: 64px;
+    height: 64px;
+
+    border-radius: 50%;
+
+    align-items: center;
+    background-size: cover; /* Масштабируем фон */
+}
+
+.repl-avatar-letter {
+    margin: 0 auto;
+
+    font-weight: 700;
+    line-height: 28px;
+    font-size: 22px;
+
+    opacity: 1;
+}
+
+ui {
+    display: flex;
+}
+
+/*.comment-main {*/
+/*    border-radius: 10%;*/
+/*    background-color: rgba(0, 0, 0, 0.08);*/
+/*}*/
+
+.cmt-mn {
+    display: contents;
+}
+
+.rierw {
+    width: auto;
+}
+
+.rew-txt {
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+
+    word-break: break-all;
+}
+
+.right-zero {
+    margin-right: 0;
+    padding-right: 0;
+
+    margin-left: 0;
+}
+
+.cm-mn {
+    width: fit-content;
+}
+
+.warp {
+    display: flex;
+    flex-direction: row;
+}
+
+.nwarp {
+    display: flex;
+    flex-direction: column;
+}
