--- a/react-app/src/user_profile_component/nullStyle.css
+++ b/react-app/src/user_profile_component/nullStyle.css
@@ -1,13 +1,17 @@
-/*Обнуление*/
+/*!*Обнуление*!*/
 /**{*/
 /*	padding: 0;*/
 /*	margin: 0;*/
 /*	border: 0;*/
+
+/*	!*box-sizing: content-box;*!*/
 /*}*/
 /**,*:before,*:after{*/
-/*	-moz-box-sizing: border-box;*/
-/*	-webkit-box-sizing: border-box;*/
-/*	box-sizing: border-box;*/
+/*	!*-moz-box-sizing: border-box;*!*/
+/*	!*-webkit-box-sizing: border-box;*!*/
+/*	!*box-sizing: border-box;*!*/
+
+/*	!*box-sizing: content-box;*!*/
 /*}*/
 /*:focus,:active{outline: none;}*/
 /*a:focus,a:active{outline: none;}*/
